trunk/Archive2/c7/2b8dc832d38c3c/output
main.cpp:10:48: error: invalid use of incomplete type 'struct foo'
   using bar_type = decltype(std::declval<foo>().bar());
                                                ^
main.cpp:3:8: error: forward declaration of 'struct foo'
 struct foo
        ^
main.cpp:10:48: error: invalid use of incomplete type 'struct foo'
   using bar_type = decltype(std::declval<foo>().bar());
                                                ^
main.cpp:3:8: error: forward declaration of 'struct foo'
 struct foo
        ^
